# integrations-examples

./: .bandit  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md
crewai_github_review_auth/: .env.example  .example.env  .gitignore  README.md  __init__.py  crew.py  main.py  pyproject.toml
crewai_github_review_auth/config/: agents.yaml  tasks.yaml
crewai_github_review_auth/tools_custom/: __init__.py  github_rest_tools.py
